# hpp-affordance

./: .git-blame-ignore-revs  CMakeLists.txt  README.md  default.nix  flake.nix  package.xml  pyproject.toml
doc/: Doxyfile.extra.in
include/hpp/affordance/: affordance-extraction.hh  doc.hh.in  fwd.hh  operations.hh
src/: affordance-extraction.cc
tests/: CMakeLists.txt  test-one-triangle1.cc  test-one-triangle2.cc  test-operations.cc  test-oriented-triangles1.cc  test-oriented-triangles2.cc  test4.py
