[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-boost ~= 1.83.0",
  "cmeel[build]",
  "coal[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "coal"
]
description = "Implementation to Extract Whole-Body Affordances for Mutli-Contact Planning."
license = "BSD-2-Clause"
name = "hpp-affordance"
version = "5.2.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
